src/objects/SOHO_Base_Price_List__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <label>Bundle Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Name__c</fullName>
        <label>Internet Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TV_Name__c</fullName>
        <label>TV Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephony__c</fullName>
        <label>Telephony</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SOHO Base Price List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bundle_Name__c</columns>
        <columns>Internet_Name__c</columns>
        <columns>TV_Name__c</columns>
        <columns>Telephony__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundle Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOHO Base Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>